// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  data-testid="stock-tag"
>
  <div>
    <div
      className="ui green small basic label"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="check icon"
      />
       
      10 items in stock
    </div>
  </div>
</div>
`;

exports[`matches snapshot 1 2`] = `
<div
  data-testid="stock-tag"
>
  <div>
    <div
      className="ui red small basic label"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="ban icon"
      />
       
      Out of Stock
    </div>
  </div>
</div>
`;

exports[`matches snapshot 1 3`] = `
<div
  data-testid="stock-tag"
>
  <div
    className="ui red small basic label"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="ban icon"
    />
     
    This item is not available
  </div>
</div>
`;
